--- a/javascript/building-blocks/functions/function-library.html
+++ b/javascript/building-blocks/functions/function-library.html
@@ -20,6 +20,36 @@
     const input = document.querySelector('.numberInput');
     const para = document.querySelector('p');
 
+    function squared(num) {
+      return num * num;
+    }
+
+    function cubed(num) {
+      return num * num * num;
+    }
+
+    function factorial(num) {
+      if (num < 0) return undefined;
+      if (num === 0) return 1;
+      let x = num - 1;
+      while (x > 1) {
+        num *= x;
+        x--;
+      }
+      return num;
+    }
+
+    input.addEventListener("change", () => {
+      const num = parseFloat(input.value);
+      if (isNaN(num)) {
+        para.innerText = "You need to enter a number!";
+      } else {
+        para.innerText = `${num} squared is ${squared(num)}.\n`;
+        para.innerText += `${num} cubed is ${cubed(num)}.\n`;
+        para.innerText += `${num} factorial is ${factorial(num)}.`;
+      }
+      });
+
   </script>
 </body>
 </html>
